Generate one GType per UOA protocol plugin

Each plugin now has its own GType inheriting from EmpathyAccountsPlugin which
is cleaner.

https://bugzilla.gnome.org/show_bug.cgi?id=683415